Added step to checkout repo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,10 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
+    - name: Checkout Repo
+    - uses: actions/checkout@v2
+
     - name: Run tests
       run: cargo test --verbose
