--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - name: Checkout repo
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Run tests
       run: cargo test --verbose
