--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,6 @@
 name: CI
 
 on:
-#   push:
-#     branches: [ master ]
-# unnecessary?
   pull_request:
     branches: [ master ]
   workflow_dispatch:
@@ -20,4 +17,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
