--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,4 +9,5 @@ Library for using the onion protocol to securely and anonymously connect to serv
 repository = "https://github.com/tomrsae/ronion"
 
 [dependencies]
-x25519-dalek = "1"
+x25519-dalek = "2.0.0-pre.1"
+rand_core = { version = "0.6.3", features = ["getrandom"] }
