--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,3 +11,4 @@ repository = "https://github.com/tomrsae/ronion"
 [dependencies]
 x25519-dalek = "2.0.0-pre.1"
 rand_core = { version = "0.6.3", features = ["getrandom"] }
+aes = "0.8.1"
