--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,6 +9,6 @@ Library for using the onion protocol to securely and anonymously connect to serv
 repository = "https://github.com/tomrsae/ronion"
 
 [dependencies]
-x25519-dalek = "2.0.0-pre.1"
-rand_core = { version = "0.6.3", features = ["getrandom"] }
+x25519-dalek = "1"
+rand_core = { version = "0.5.1", features = ["getrandom"] }
 aes = "0.8.1"
