Feat/crypto setup (#4)
* Fixed project structure to allow dependencies

* Created utillity funcs for  cryptography

* Refactored with encryption from a library

* Removed unfinished

* Refactor visibility

* Removed comments

* fix lib.rs

* PR refactoring/optimization

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,3 +9,6 @@ Library for using the onion protocol to securely and anonymously connect to serv
 repository = "https://github.com/tomrsae/ronion"
 
 [dependencies]
+x25519-dalek = "1"
+rand_core = { version = "0.5.1", features = ["getrandom"] }
+aes = "0.8.1"
