--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,3 +12,4 @@ repository = "https://github.com/tomrsae/ronion"
 x25519-dalek = "1"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
 aes = "0.8.1"
+async-std = "1.10.0"
