--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,3 +13,4 @@ x25519-dalek = "1"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
 aes = "0.8.1"
 async-std = "1.10.0"
+num = "0.4.0"
