re structure. Consumer circuit logic

--- a/cmd/consumer/Cargo.toml
+++ b/cmd/consumer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ronion_consumer"
+name = "ronion_proxy"
 version = "0.1.0"
 authors = ["Norbert Görke <norgor@gmail.com>", "Magnus Hektoen Steensland <mag.steensland@gmail.com>", "Tommy René Sætre <tommyrsaetre@gmail.com>"]
 edition = "2021"
