--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,3 +13,6 @@ x25519-dalek = "1"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
 aes = "0.8.1"
 async-std = "1.10.0"
+shadowsocks = "1.14.0"
+tokio = { version = "1.17.0", features = ["full"] }
+shadowsocks-service = "1.14.1"
