Moved Proxy to own app to use library Consumer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "core/",
-    "cmd/consumer/",
+    "ronion-lib/",
+    "cmd/proxy/",
     "cmd/index/",
     "cmd/relay/",
 ]
