--- a/ronion-lib/Cargo.toml
+++ b/ronion-lib/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/tomrsae/ronion"
 
 [dependencies]
 x25519-dalek = "1"
+ed25519-dalek = "1"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
 aes = "0.8.1"
 async-std = "1.10.0"
