--- a/ronion-lib/Cargo.toml
+++ b/ronion-lib/Cargo.toml
@@ -13,4 +13,4 @@ x25519-dalek = "1"
 ed25519-dalek = "1"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
 aes = "0.8.1"
-async-std = "1.10.0"
+async-std = { version = "1.10.0", features = ["attributes"] }
