--- a/cmd/proxy/Cargo.toml
+++ b/cmd/proxy/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 [dependencies]
 shadowsocks = "1.14.0"
 tokio = { version = "1.17.0", features = ["full"] }
-ronion-lib = { path = "../../ronion-lib" }
+core = { path = "../../core" }
