--- a/cmd/index/Cargo.toml
+++ b/cmd/index/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Norbert Görke <norgor@gmail.com>", "Magnus Hektoen Steensland <mag.
 edition = "2021"
 
 [dependencies]
+core = { path = "../../core" }
