--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,5 +12,5 @@ repository = "https://github.com/tomrsae/ronion"
 x25519-dalek = "1"
 ed25519-dalek = "1"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
-aes = "0.8.1"
+aes-gcm = "0.9.4"
 async-std = { version = "1.10.0", features = ["attributes"] }
